fixed overflow

--- a/src/components/HeroShowcase/HeroShowcase.module.css
+++ b/src/components/HeroShowcase/HeroShowcase.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  overflow: hidden;
 }
 
 .header {
